Bug 403852 - Displayed interface name in the component diagram is not updated after changing it in the properties dialog
Summary: Displayed interface name in the component diagram is not updated after changi...
Status: RESOLVED FIXED
Alias: None
Product: umbrello
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.27.1 (KDE Applications 18.12.1)
Platform: Other All
: NOR normal
Target Milestone: ---
Assignee: Umbrello Development Group
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2019-02-02 10:30 UTC by Ralf Habacker
Modified: 2019-02-03 16:27 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.27.2 (KDE Applications 18.12.2)
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Ralf Habacker 2019-02-02 10:30:38 UTC
STEPS TO REPRODUCE
1. start umbrello
2. add component diagram
3. add interface
4. open properties dialog
5. change interface name

OBSERVED RESULT
The interface name displayed in the diagram does not show the new name


EXPECTED RESULT
The interface name displayed in the diagram should show the new name


SOFTWARE/OS VERSIONS
Linux: openSUSE Leap 42.3
KDE Frameworks Version: 5.54
Qt Version: 5.11

ADDITIONAL INFORMATION
Comment 1 Ralf Habacker 2019-02-02 10:38:37 UTC
Git commit ea41f50f515103b9461e78167bebe2deec04267c by Ralf Habacker.
Committed on 02/02/2019 at 10:38.
Pushed by habacker into branch 'Applications/18.12'.

Fix 'Displayed interface name in the component diagram is not updated after changing it in the properties dialog'

UMLWidget::showPropertiesDialog() could not be used here because it does
not know anything about the connected floating text widget.
FIXED-IN:2.27.2 (KDE Applications 18.12.2)

M  +12   -0    umbrello/umlwidgets/classifierwidget.cpp
M  +2    -0    umbrello/umlwidgets/classifierwidget.h

https://commits.kde.org/umbrello/ea41f50f515103b9461e78167bebe2deec04267c
Comment 2 Gerhard Landsmann 2019-02-03 16:26:22 UTC
PLEASE GET ME OFF THE DISTRIBUTION!!!


Am 02.02.19 um 11:30 schrieb Ralf Habacker:
> https://bugs.kde.org/show_bug.cgi?id=403852
>
>              Bug ID: 403852
>             Summary: Displayed interface name in the component diagram is
>                      not updated after changing it in the properties dialog
>             Product: umbrello
>             Version: 2.27.1 (KDE Applications 18.12.1)
>            Platform: Other
>                  OS: All
>              Status: REPORTED
>            Severity: normal
>            Priority: NOR
>           Component: general
>            Assignee: umbrello-devel@kde.org
>            Reporter: ralf.habacker@freenet.de
>    Target Milestone: ---
>
> STEPS TO REPRODUCE
> 1. start umbrello
> 2. add component diagram
> 3. add interface
> 4. open properties dialog
> 5. change interface name
>
> OBSERVED RESULT
> The interface name displayed in the diagram does not show the new name
>
>
> EXPECTED RESULT
> The interface name displayed in the diagram should show the new name
>
>
> SOFTWARE/OS VERSIONS
> Linux: openSUSE Leap 42.3
> KDE Frameworks Version: 5.54
> Qt Version: 5.11
>
> ADDITIONAL INFORMATION
>
Comment 3 Gerhard Landsmann 2019-02-03 16:27:19 UTC
PLEASE GET ME OFF THE DISTRIBUTION!!!


Am 02.02.19 um 11:38 schrieb Ralf Habacker:
> https://bugs.kde.org/show_bug.cgi?id=403852
>
> Ralf Habacker <ralf.habacker@freenet.de> changed:
>
>             What    |Removed                     |Added
> ----------------------------------------------------------------------------
>     Version Fixed In|                            |2.27.2 (KDE Applications
>                     |                            |18.12.2)
>        Latest Commit|                            |https://commits.kde.org/umb
>                     |                            |rello/ea41f50f515103b9461e7
>                     |                            |8167bebe2deec04267c
>               Status|REPORTED                    |RESOLVED
>           Resolution|---                         |FIXED
>
> --- Comment #1 from Ralf Habacker <ralf.habacker@freenet.de> ---
> Git commit ea41f50f515103b9461e78167bebe2deec04267c by Ralf Habacker.
> Committed on 02/02/2019 at 10:38.
> Pushed by habacker into branch 'Applications/18.12'.
>
> Fix 'Displayed interface name in the component diagram is not updated after
> changing it in the properties dialog'
>
> UMLWidget::showPropertiesDialog() could not be used here because it does
> not know anything about the connected floating text widget.
> FIXED-IN:2.27.2 (KDE Applications 18.12.2)
>
> M  +12   -0    umbrello/umlwidgets/classifierwidget.cpp
> M  +2    -0    umbrello/umlwidgets/classifierwidget.h
>
> https://commits.kde.org/umbrello/ea41f50f515103b9461e78167bebe2deec04267c
>