Fix 'Displayed interface name in the component diagram is not updated after changing it in the properties dialog'

UMLWidget::showPropertiesDialog() could not be used here because it does
not know anything about the connected floating text widget.

BUG:403852
FIXED-IN:2.27.2 (KDE Applications 18.12.2)