umbrello/umlwidgets/classifierwidget.cpp
@@ -1495,3 +1495,15 @@ void ClassifierWidget::slotShowOperations(bool state)
     setVisualProperty(ShowOperations, state);
 }
 
+/**
+ * Show a properties dialog for a ClassifierWidget
+ */
+bool ClassifierWidget::showPropertiesDialog()
+{
+    if (UMLWidget::showPropertiesDialog()) {
+        if (isInterfaceWidget() && visualProperty(DrawAsCircle))
+            m_pInterfaceName->setText(name());
+        return true;
+    }
+    return false;
+}
