umbrello/umlwidgets/classifierwidget.h
@@ -106,6 +106,8 @@ public:
     virtual void saveToXMI1(QDomDocument & qDoc, QDomElement & qElement);
     virtual bool loadFromXMI1(QDomElement & qElement);
 
+    virtual bool showPropertiesDialog();
+
 public Q_SLOTS:
     virtual void slotMenuSelection(QAction* action);
 
